refactor 24.10.14 테스트 수정