@@ -1,16 +1,15 @@
 package lotto.domain;
 
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-
 import static lotto.domain.LottoRank.SECOND;
 import static lotto.domain.LottoRank.THIRD;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 
 class LottoTest {
     @DisplayName("로또등수")
@@ -40,7 +39,7 @@ class LottoTest {
     void 로또_발행시_6개_아닐시_에러() {
         List<Integer> lottoNumbers = new ArrayList<>(Arrays.asList(1, 3, 5, 7, 9));
         assertThatThrownBy(() -> {
-            new LottoNumber(lottoNumbers);
+            new Lotto(lottoNumbers);
         }).isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -48,37 +47,27 @@ class LottoTest {
     @Test
     void 로또번호_정렬() {
         List<Integer> numbers = new ArrayList<>(Arrays.asList(1, 11, 8, 5, 7, 9));
-        LottoNumber lottoNumber = new LottoNumber(numbers);
-        assertThat(lottoNumber.getLottoNumber()).isEqualTo(List.of(1, 5, 7, 8, 9, 11));
+        Lotto lotto = new Lotto(numbers);
+        assertThat(lotto).isEqualTo(new Lotto(Arrays.asList(1, 5, 7, 8, 9, 11)));
     }
 
     @DisplayName("보너스 번호 일치 여부 확인")
     @Test
     void 보너스_번호_일치_확인() {
         List<Integer> numbers = new ArrayList<>(Arrays.asList(1, 2, 3, 4, 5, 7));
-        LottoNumber lottoNumber = new LottoNumber(numbers);
+        Lotto lotto = new Lotto(numbers);
         int bonusNumber = 7;
-        assertThat(lottoNumber.isNumberContain(bonusNumber)).isTrue();
+        assertThat(lotto.isNumberContain(bonusNumber)).isTrue();
     }
 
-    @DisplayName("로또 번호 몇개 맞췄는지")
-    @Test
-    void 로또_번호_일치갯수() {
-        List<Integer> numbers = new ArrayList<>(Arrays.asList(1, 2, 3, 4, 5, 7));
-        LottoNumber lottoNumber = new LottoNumber(numbers);
-        String[] winning = {"1", "2", "3", "4", "5", "6"};
-        int bonusNumber = 7;
-        WinningLotto winningLotto = new WinningLotto(new Lotto(winning), bonusNumber);
-        assertThat(lottoNumber.getMatchCount(winningLotto.getWinningLotto())).isEqualTo(5);
-    }
 
     @DisplayName("중복 번호 있을 시 에러")
     @Test
     void 중복_에러() {
         List<Integer> numbers = new ArrayList<>(Arrays.asList(1, 2, 3, 4, 5, 7));
-        LottoNumber lottoNumber = new LottoNumber(numbers);
+        Lotto lotto = new Lotto(numbers);
         assertThatThrownBy(() -> {
-            lottoNumber.validateDuplicate(1);
+            lotto.validateDuplicate(1);
         }).isInstanceOf(IllegalArgumentException.class);
     }
 }
